--- a/QLSL/QLSL.csproj
+++ b/QLSL/QLSL.csproj
@@ -25,6 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -274,6 +275,7 @@
     <Compile Include="ViewModels\AssigedVMSData.cs" />
     <Compile Include="ViewModels\AssigedZoneData.cs" />
     <Compile Include="ViewModels\CCTVReportData.cs" />
+    <Compile Include="ViewModels\DashboardReport.cs" />
     <Compile Include="ViewModels\TrafficLightNodeReport.cs" />
     <Compile Include="ViewModels\VMSReportData.cs" />
   </ItemGroup>
@@ -361,6 +363,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Scripts\app\controllers\report\index.js" />
+    <Content Include="Scripts\app\controllers\report\utils.js" />
     <Content Include="Scripts\bootbox.js" />
     <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap-datetimepicker.js" />
@@ -450,6 +453,7 @@
     <Content Include="Content\bootstrap\alerts.less" />
     <Content Include="Content\_bootstrap-datetimepicker.less" />
     <Content Include="Content\bootstrap-datetimepicker-build.less" />
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
     <Content Include="Scripts\Chart.js" />
     <Content Include="Scripts\Chart.min.js" />
