--- a/QLSL/packages.config
+++ b/QLSL/packages.config
@@ -10,6 +10,7 @@
   <package id="chosen" version="1.2.0" targetFramework="net452" />
   <package id="chosen.jquery" version="1.2.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net452" />
   <package id="jQuery" version="1.12.4" targetFramework="net452" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
